# fala-gavea

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.json
_output/: .pending-cleanup-stamp  .pending-periodic-stamp  .post-skill-checkpoint  .spec-drift-check-stamp  INDEX.md  briefs-index.md  briefs.md  doc-000108-workspace-contextual-help.md  pending.jsonl  product-design-as-coded-changelog.md  telemetry.jsonl
data/: fake-sample-gavealab.csv  seed_journey_anchors.csv  seed_relatos_fala_gavea_1k.csv  seed_relatos_fala_gavea_200.csv  seed_relatos_fala_gavea_5k.csv
docs/: communication-000125-evaluators.html  communication-000126-clients.html  communication-000128-academics.html  index.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
product-design/: conventions.md
scripts/: backfill_semantic.py  gavea_clusters.py  generate_natural_relatos.py  recluster_coordinates.py  reindex_selfdocs.py  seed_all.py  seed_citizen01.py  seed_comments.py  seed_forwarding_lifecycle.py  seed_forwardings.py  seed_journey_anchors.py  seed_relatos.py  seed_report_types.py  seed_saved_filters.py  seed_users.py  seed_votes.py  train_topic_classifier.ipynb
tests/: conftest.py  test_auth.py  test_bootstrap_admin.py  test_bulk_create_report_types.py  test_bulk_create_reports.py  test_forwardings.py  test_nl_filter_router.py  test_parse_nl_filter.py  test_query_reports.py  test_report_repository.py  test_report_types.py  test_reports.py  test_reports_query_api.py  test_reports_semantic.py  test_seed_endpoint.py  (+8 more)
(+423 files in other folders)
